# GPU-course

./: .gitignore  README.md
code/2024/intersect/: CMakeLists.txt  main.cpp  main2.cpp  orig.cpp
code/2024/matrix/: CMakeLists.txt  algo.cpp  main.cpp
code/2024/matrix/mod/: macro.h  micro.h  mult.h  reorder.h
code/2024/matrix/mult/: reordered.h
code/2024/matrix/pure/: defs.h  gemm.h  init.h  macro.h  micro.h  reorder.h
code/2024/matrix/tools/: matrix.h  simd.h  stats.h  threadpool.h
code/2024/threadpool/: CMakeLists.txt  main.cpp  meg.cpp
code/2024/utils/: CMakeLists.txt
code/2024/utils/utils/: .gvec.h.swp  camera.h  gvec.h  overloaded.h  simd_ray.h  simd_types.h  sphere.h  stats.h  types.h
code/blackHoleRender/: gui.h  main.cpp  texture.h
code/blackHoleRender/shader/: OTO.glsl  analyticalCapecNeDodelal.glsl  attempt.glsl  vertex.glsl  zhest.glsl
code/fractalsOpenGL/: CMakeLists.txt  main.cpp  shader.h  window.h
code/fractalsOpenGL/glad/include/glad/: glad.h
code/fractalsOpenGL/glad/src/: glad.c
code/fractalsOpenGL/shader/: fragment.glsl  vertex.glsl
code/fractalsOpenGL/shader/me/: vertex.glsl
code/lessons/intersection/attempt/: CMakeLists.txt  main.cpp  show.sh
code/lessons/intersection/snowman/: main.cpp
code/lessons/zero_bvh/: CMakeLists.txt  main.cpp
code/october/cornell/: CMakeLists.txt  cornell.glb  cornell1(4).glb  cornell1.glb  main.cpp
code/october/random/: CMakeLists.txt  main.cpp
code/october/renderer/: CMakeLists.txt  main.cpp
code/october/singles/: circle.cpp  importance.cpp  monte_carlo_1d.cpp  random.h
code/october/utils/: CMakeLists.txt
code/october/utils/gltf-parser/: .gitlab-ci.yml  CMakeLists.txt
code/october/utils/gltf-parser/include/gltf/: .gvec.h.swp  accessor.h  asset.h  binary_file.h  buffer.h  buffer_view.h  gltf.h  gvec.h  image.h  json.h  material.h  mesh.h  node.h  sampler.h  scene.h  texture.h  types.h
code/october/utils/gltf-parser/include/gltf/as/: binary_heap_bvh.h  bottom_level.h  top_level.h
code/october/utils/gltf-parser/include/gltf/utils/: aabb.h  camera.h  encode.h  image.h  offset_point.h  orthonormal.h  ray.h  texture.h  triangle.h
code/october/utils/gltf-parser/include/gltf/view/: buffer.h  geometry.h
code/october/utils/gltf-parser/src/: accessor.cpp  asset.cpp  binary_file.cpp  buffer.cpp  buffer_view.cpp  common.h  image.cpp  json.cpp  material.cpp  mesh.cpp  node.cpp  sampler.cpp  scene.cpp  texture.cpp
code/october/utils/gltf-parser/src/utils/: image.cpp
code/october/utils/gltf-parser/test/: CMakeLists.txt  main.cpp
code/october/utils/utils/: bsdf_sampler.h  combine_sample.h  histogram.h  index_sample.h  light_sampler.h  sample.h  scene.h  squares.h  tlas.h  triangle_sample.h  types.h
code/september/snowman/: CMakeLists.txt  main.cpp
code/september/traverse/stackful/: alternating.cpp  general.cpp  left_first.cpp
code/september/traverse/stackless/: alternating.cpp  general.cpp  left_first.cpp
code/september/utils/utils/: bvh.h  ray.h  sphere.h  types.h  vec3.h  wfobj.h
code/september/zero/: CMakeLists.txt  main.cpp
code/september/zero_bvh/: CMakeLists.txt  main.cpp
code/utils/: CMakeLists.txt
code/utils/utils/: .bvh.h.swp  .sdTorus.h.swo  .sdTorus.h.swp  BVH.h  aabb.h  bvh.h  ray.h  sdTorus.h  sphere.h  triangle.h  vec3.h
code/xyz/: xyz.cpp
src/lessons/intersection/attempt/: CMakeLists.txt
src/lessons/intersection/snowman/: CMakeLists.txt
src/ppm/: main.cpp
src/utils/: CMakeLists.txt
src/utils/utils/: camera.h  triangle.h  vec3.h
